--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <div class="container">
     <main>
-      <h1>Welcome to My Website</h1>
+      <h1>ByteRotiDemo</h1>
       <p>This is the main content area. You can add articles, images, or anything here.</p>
     </main>
     
