--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <div class="logo">MySite</div>
+    <div class="logo">ByteRotiDemo</div>
     <nav>
       <ul>
         <li><a href="#">Home</a></li>
